--- a/project2.html
+++ b/project2.html
@@ -22,10 +22,10 @@
             <p class="word1">Please say yesss :)</p>
         </div>
         <div class="button-grid">
-            <a href="http://127.0.0.1:5501/project5.html">
+            <a href="project5.html">
                 YES
             </a>
-            <a href="http://127.0.0.1:5501/project3.html">
+            <a href="project3.html">
                 NO
             </a>
         </div>
