--- a/project1.html
+++ b/project1.html
@@ -23,9 +23,9 @@
             <p class="word1">Please say yesss :) </p>
         </div>
         <div class="button-grid">
-            <a class="b1" href="http://127.0.0.1:5501/project5.html">YES
+            <a class="b1" href="project5.html">YES
             </a>
-            <a class="b2" href="http://127.0.0.1:5501/project2.html">NO
+            <a class="b2" href="project2.html">NO
             </a>
         </div>
     </div>
