--- a/project3.html
+++ b/project3.html
@@ -22,10 +22,10 @@
             <p class="word1">Why are you doing this?</p>
         </div>
         <div class="button-grid">
-            <a href="http://127.0.0.1:5501/project5.html">
+            <a href="project5.html">
                 YES
             </a>
-            <a href="http://127.0.0.1:5501/project4.html">
+            <a href="project4.html">
                 NO
             </a>
         </div>
