--- a/project4.html
+++ b/project4.html
@@ -22,7 +22,7 @@
             <p class="word1">To much yaar,This is wrong..&#128557;</p>
         </div>
         <div class="button-grid">
-            <a href="http://127.0.0.1:5501/project5.html">
+            <a href="project5.html">
                  YES
             </a>
             <button id="noButton">NO</button>
